--- a/resources/js/Pages/Public/Home/LocationCombobox/LocationCombobox.scss
+++ b/resources/js/Pages/Public/Home/LocationCombobox/LocationCombobox.scss
@@ -13,6 +13,7 @@
 	overflow-y: hidden;
 
 	.input {
+		line-height: 1;
 		flex-grow: 0;
 		position: relative;
 		padding-left: 1px;
@@ -28,7 +29,7 @@
 			background-color: inherit;
 			margin: 1px;
 			height: calc(2.5em - 2px);
-			padding-left: calc(0.5em);
+			padding-left: calc(0.75em);
 			padding-right: calc(1.75em);
 			font-size: 1em;
 			border-radius: 2em;
